[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "src/ewatercycle_lisflood/__init__.py"

[project]
name = "ewatercycle-lisflood"
description = "eWaterCycle plugin for LISFLOOD hydrological model"
readme = "README.md"
license = "Apache-2.0"
authors = [
  { name = "Bart Schilperoort, Peter Kalverla, Stefan Verhoeven", email = "b.schilperoort@esciencecenter.nl" },
]
keywords = ["ewatercycle", "hydrology"]
classifiers = [
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Natural Language :: English",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3 :: Only",
]

# Include here only the dependencies for the eWaterCycle wrapped model
dependencies = [
  "ewatercycle>=2.0.0b2",
]
dynamic = ["version"]

# This registers the plugin such that it is discoverable by eWaterCycle
[project.entry-points."ewatercycle.models"]
Lisflood = "ewatercycle_lisflood.model:Lisflood"
[project.entry-points."ewatercycle.forcings"]
LisfloodForcing = "ewatercycle_lisflood.forcing:LisfloodForcing"
[project.entry-points."ewatercycle.parameter_sets"]
lisflood_fraser = "ewatercycle_lisflood.parameter_sets:lisflood_fraser"

[project.urls]
homepage = "https://github.com/eWaterCycle/ewatercycle-lisflood/"
